Make sure the buttons are visible on a MBA

--- a/octoprint_thespaghettidetective/static/less/TheSpaghettiDetective.less
+++ b/octoprint_thespaghettidetective/static/less/TheSpaghettiDetective.less
@@ -278,7 +278,7 @@ div[id$=_plugin_thespaghettidetective] {
 
   // Wizard title
   .header {
-    margin-top: 30px;
+    margin-top: 24px;
 
     .title {
       margin: 0;
@@ -396,7 +396,7 @@ div[id$=_plugin_thespaghettidetective] {
 
       .option {
         text-align: center;
-        margin: 50px 30px;
+        margin: 30px 30px;
         color: #fff;
 
         .button {
